# Tape-inventory-Management

./: .gitignore  DEPLOYMENT_GUIDE.md  LICENSE.txt  QuanLyDonHang.spec  README.md  README_DISTRIBUTION.txt  TapeInventoryManagement.spec  bang_keo_in_tab.py  build.py  build_app.spec  build_config.spec  build_installer.py  build_installer.spec  build_release.py  build_release.spec  config_example.py  create_distribution.py  create_installer.py  database.py  donhang_form.py  excel_import.py  file_version_info.txt  history_tab.py  installer.iss  installer.nsi  installer.py  inventory.db  last_update_check.json  main.py  orders.db  preview_dialog.py  publish_to_github.py  report_gen.py  requirements.txt  setup.py  setup_github_release.py  splash_screen.py  tab_base.py  tape_inventory.spec  tempCodeRunnerFile.py  (+3 more)
TapeInventoryManagement/: TapeInventoryManagement.spec
backup/: local_backup.db
cpp_src/: CMakeLists.txt  README.md  build.ps1  build.sh  vcpkg.json
cpp_src/include/: MainWindow.hpp
cpp_src/include/database/: Database.hpp  Models.hpp
cpp_src/include/services/: ConfigService.hpp  ExcelService.hpp  LoggingService.hpp  ReportService.hpp
cpp_src/include/ui/: MainWindow.hpp  OrderForm.hpp
cpp_src/include/ui/dialogs/: OrderDialog.hpp  ReportDialog.hpp
cpp_src/include/ui/tabs/: BangKeoInTab.hpp  BangKeoTab.hpp  BaseTab.hpp  HistoryTab.hpp  ThongKeTab.hpp  TrucInTab.hpp
cpp_src/src/: MainWindow.cpp  main.cpp
cpp_src/src/database/: Database.cpp
cpp_src/src/services/: ConfigService.cpp  ExcelService.cpp  LoggingService.cpp  ReportService.cpp
cpp_src/src/ui/: MainWindow.cpp  OrderForm.cpp
cpp_src/src/ui/dialogs/: OrderDialog.cpp  ReportDialog.cpp
cpp_src/src/ui/tabs/: BangKeoInTab.cpp  BangKeoTab.cpp  BaseTab.cpp  HistoryTab.cpp  ThongKeTab.cpp  TrucInTab.cpp
migrations/: env.py
migrations/versions/: 15958875c599_add_customer_name.py  d6925d93b335_rename_thanh_tien_to_thanh_tien_goc_in_.py
my-progress-dashboard/: package-lock.json  package.json
quanlydonhang.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
single_files/: build_app.spec  setup.iss
src/: main.py
src/database/: database.py  models.py  run_migration.py  run_truc_in_migration.py
src/database/migrations/: add_shipping_columns.py  update_net_profit.py  update_truc_in_columns.py
src/services/: dashboard_service.py  excel_import.py  report_gen.py
src/ui/forms/: donhang_form.py  preview_dialog.py  splash_screen.py  update_dialog.py
src/ui/reports/: order_selection_dialog.py
src/ui/tabs/: bang_keo_in_tab.py  bang_keo_tab.py  dashboard_tab.py  history_tab.py  tab_base.py  thong_ke_tab.py  thong_ke_window.py  truc_in_tab.py
src/ui/tabs/history_components/: edit_dialog.py  export_import.py  filters.py  tree_views.py  utils.py
src/utils/: auto_update.py  config.py  helpers.py  ui_styles.py  ui_utils.py  version_manager.py
